fixed width of tone selector on mobile

--- a/src/components/ToneSelector/ToneSelector.module.css
+++ b/src/components/ToneSelector/ToneSelector.module.css
@@ -6,7 +6,7 @@
   color: #31364d;
 }
 
-.tone select {
+.select {
   width: 50%;
   border-radius: 6px;
   font-size: 16px;
@@ -19,5 +19,9 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+  }
+
+  .select {
+    width: 75%;
   }
 }
